--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="styles/style.css" />
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Playfair+Display?sort=popularity" />
   <link rel="stylesheet" href="https://fonts.google.com/specimen/Roboto" />
