--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <div id="home">
     <h1>Welcome to the Semester Resources</h1>
     <p>
+      Exam will most likely happen after election so i should march on. 
       This semester covers various topics in cellular communication, signal and system, and data structure and algorithm.
       Explore the navigation bar to access specific resources.
     </p>
