Added new page cellular Communication

--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 
 <body>
   <div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#DSA">DSA</a>
-    <a href="#Cellular">Cellular &amp Wireless Network</a>
+    <a class="active" href="index.html">Home</a>
+    <a href="#dsa">DSA</a>
+    <a href="cellular.html">Cellular &amp Wireless Network</a>
     <a href="#signal">Signal &amp System</a>
+  </div>
+
+  <div id="loading-screen">
+    <div id="loading-spinner"></div>
   </div>
 
   <div id="home">
