--- a/cellular.html
+++ b/cellular.html
@@ -18,7 +18,10 @@
     <a class="active" href="cellular.html">Cellular &amp Wireless Network</a>
     <a href="#signal">Signal &amp System</a>
   </div>
-
+  <div id = "User">
+    <h3>Change User</h3>
+    <button>Change</button>
+  </div>
   <div id="loading-screen">
     <div id="loading-spinner"></div>
 </div>
