--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@
     </ul>
   </div>
   
+  <div id = "User">
+    <h3>Change User</h3>
+    <button>Change</button>
+  </div>
 
   <script src="scripts/main.js"></script>
 </body>
